test/modules/figueroa/DuplicateConfigVars/RandomNumber.good
RandomNumber.chpl:11: error: functions cannot return nested iterators or loop expressions
